デザイナサンプル

--- a/CS/Application/CommonApplication.exe.config
+++ b/CS/Application/CommonApplication.exe.config
@@ -58,7 +58,7 @@
       <customBinding>
         <binding name="DefaultBinding" sendTimeout="00:05:00">
           <binaryMessageEncoding compressionFormat="GZip"/>
-          <httpTransport allowCookies="true" />
+          <httpTransport allowCookies="false" />
         </binding>
       </customBinding>
     </bindings>
