--- a/CS/Src/WebApplication/Web.config
+++ b/CS/Src/WebApplication/Web.config
@@ -23,10 +23,10 @@
       <forms cookieless="UseCookies" timeout="1" slidingExpiration="true" loginUrl="Home/Index" />
     </authentication>
 
-    <!-- 認証ユーザー以外アクセス不可 
+    <!-- 認証ユーザー以外アクセス不可 -->
     <authorization>
       <deny users="?"/>
-    </authorization>-->
+    </authorization>
 
     <!-- セッション -->
     <sessionState timeout="5" />
